# simple-cpp-libinput-watchdog

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/simple_cpp/in_dog/: app.cpp  app.hpp  client.cpp  event_fd.cpp  event_fd.hpp  fd.cpp  fd.hpp  input.cpp  input.hpp  main.cpp  unix_socket.cpp  unix_socket.hpp
test/: CMakeLists.txt
test/simple_cpp/in_dog/: app_test.cpp  input_test.cpp  unx_socket_test.cpp
